--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 * { padding:0; margin:0; }
 a { color: #ccc; text-decoration: none; }
 a:hover { color: #aaa; }
+pre { color: #ccc; }
 /* body --------------------------------------------------------------*/
 body {
 	font: 12px/18px sans-serif;
@@ -60,6 +61,9 @@ body {
     -moz-box-shadow: 1px 1px 12px #000;
     box-shadow: 1px 1px 12px #000;
 }
+.categorie a { text-decoration: underline ; }
+.categorie h2 { padding: 10px 0 0 10px; }
+.categorie p {padding-bottom: 10px; }
 
 /* footer ------------------------------------------------------------*/
 #footer {
