--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 	width: 100%;
 	height: 100%;
 	margin: 0px auto;
-	background-color: #444;
+	background-color: #A8A8A8;
 	overflow: hidden;
 }
 /* header ------------------------------------------------------------*/
@@ -24,7 +24,7 @@ body {
     z-index: 10;
     width: 100%;
     padding: 3px 5px 5px 2px;
-    background-color: #0F0F0F;
+    background-color: #2B2B2B;
     -webkit-box-shadow: 1px 1px 12px #000;
     -moz-box-shadow: 1px 1px 12px #000;
     box-shadow: 1px 1px 12px #000;
@@ -56,7 +56,7 @@ body {
 	margin: 0 auto 10px auto;
 	position: relative;
 	width: 90%;
-	background-color: #2B2B2B;
+	background-color: #525252;
     -webkit-box-shadow: 1px 1px 12px #000;
     -moz-box-shadow: 1px 1px 12px #000;
     box-shadow: 1px 1px 12px #000;
@@ -70,7 +70,7 @@ body {
 	display: block;
     width: 100%;
 	padding: 0px 5px 0px 5px;
-	background-color: #0F0F0F;
+	background-color: #2B2B2B;
     font-size: 10px;
     text-align: center;
     -webkit-box-shadow: 1px 1px 12px #000;
